Add new view when there is no drink runs

--- a/src/translations/landing/EN.json
+++ b/src/translations/landing/EN.json
@@ -17,5 +17,6 @@
   "addDrink": "Add Drink",
   "drinkName": "Drink Name",
   "drinkType": "Drink Type",
-  "currentUsers": "Currently added users:"
+  "currentUsers": "Currently added users:",
+  "noRuns": "No drink runs exist at this time."
 }
