--- a/src/translations/landing/FR.json
+++ b/src/translations/landing/FR.json
@@ -17,5 +17,6 @@
   "addDrink": "Ajouter une boisson",
   "drinkName": "Nom de la boisson",
   "drinkType": "Type de boisson",
-  "currentUsers": "Utilisateurs ajoutés actuellement"
+  "currentUsers": "Utilisateurs ajoutés actuellement",
+  "noRuns": "Aucune course de boissons n’existe pour le moment."
 }
